# wordle_solver

./: Cargo.toml  LICENSE  README.md  build.rs
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml
src/: lib.rs  main.rs
src/commands/: analyze.rs  benchmark.rs  mod.rs  simple.rs  solve.rs  test_all.rs
src/core/: mod.rs  pattern.rs  word.rs
src/interactive/: app.rs  mod.rs  rendering.rs
src/output/: display.rs  formatters.rs  mod.rs
src/solver/: adaptive.rs  engine.rs  mod.rs  strategy.rs
src/solver/entropy/: calculator.rs  mod.rs  selector.rs
src/solver/minimax/: calculator.rs  mod.rs  selector.rs
src/solver/selection/: adaptive.rs  hybrid.rs  mod.rs
src/wordlists/: embedded.rs  loader.rs  mod.rs
