[package]
name = "wordle_solver"
version = "1.0.0"
edition = "2024"
authors = ["nsheely"]
description = "Wordle solver using information theory and game theory"
license = "MIT"
repository = "https://github.com/nsheely/Wordle_Solver"
keywords = ["wordle", "solver", "entropy", "information-theory"]
categories = ["games", "algorithms"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Allow some overly-strict pedantic lints first
cast_precision_loss = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
# Then enable groups
all = "warn"
pedantic = "warn"

[dependencies]
# Core
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.29"

# Performance
rayon = "1.11"
rustc-hash = "2.1"

# Utilities
colored = "3.0"
indicatif = "0.18"
rand = "0.9"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 2
